--- a/en.html
+++ b/en.html
@@ -25,7 +25,7 @@
     <br><br>
     <main>
       <section id="home">
-	  <p><span id="main-title-one">SUCCESS</span><span id="main-title-two"> IS OUR </span><span id="main-title-three">SHARED</span><span id="main-title-two"> JOURNEY</span></p>
+	      <p><span id="main-title-one"><b>SUCCESS</b></span><span id="main-title-two"> IS OUR </span><span id="main-title-three"><b>SHARED</b></span><span id="main-title-two"> JOURNEY</span></p>
         <h3>Erwan Sillon</h3>
 		<div id="changing-text"><span id="changing-text-en"></span><span id="changing-text-fr"></span></div>
         <p>I am an ambitious young man with big dreams and the drive to achieve them.
