--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <br><br>
     <main>
       <section id="home">
-	  <p><span id="main-title-one">LE SUCCÈS</span><span id="main-title-two"> EST </span><span id="main-title-three">NOTRE</span><span id="main-title-two"> AVENTURE</span></p>
+	  <p><span id="main-title-one"><b>LE SUCCÈS</b></span><span id="main-title-two"> EST </span><span id="main-title-three"><b>NOTRE</b></span><span id="main-title-two"> AVENTURE</span></p>
         <h3>Erwan Sillon</h3>
 		<div id="changing-text"><span id="changing-text-en"></span><span id="changing-text-fr"></span></div>
         <p>Je suis un jeune homme ambitieux avec de grands rêves et la détermination pour les réaliser.
